--- a/Template/home_page.html
+++ b/Template/home_page.html
@@ -9,7 +9,7 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel='stylesheet' href='{% static "css/main.css" %}'>
+        <link rel='stylesheet' href= "{% static 'css/main.css' %}" >
     
     </head>
     <body>
@@ -21,7 +21,7 @@
 
             <div class='row'>
                 <div class='col'>
-                    <img src="{% static 'img/th.jpg' %}" class='img-fluid' />
+                    <img src = "{% static 'img/th.jpg' %}" class='img-fluid' />
                     <p>{{ content }}</p> 
                 </div>
             </div>
