--- a/Template/home_page.html
+++ b/Template/home_page.html
@@ -1,4 +1,32 @@
+{% extends "base.html" %}
+
 {% load static %}
+<title>
+    Home Page Template
+</title>
+{% block content %}
+    <div class='text-center'>
+        <h1>{{ title }}</h1>
+            <p>{{ content }}</p>
+    </div>
+    <div class='container'>
+    <div class='row'>
+        <div class='col'>
+        <img src="{% static 'img/th.jpg' %}" class='img-fluid' />
+        <p>{{ content }}</p>
+        </div>
+    </div>
+
+    {% if request.user.is_authenticated %}
+        <div class='row'>
+        <div class='col'>
+            <h1>Premium</h1>
+            <p>{{ premium_content }}</p>
+        </div>
+        </div>
+        {% endif %}
+    </div>
+{% endblock %}
 
 <!doctype html>
 <html lang="en">
@@ -13,27 +41,7 @@
     
     </head>
     <body>
-        <div class='text-center'>
-            <h1>{{ title }}</h1>
-            <p>{{ content }}</p>
-        </div>
-        <div class='container'>
-
-            <div class='row'>
-                <div class='col'>
-                    <img src = "{% static 'img/th.jpg' %}" class='img-fluid' />
-                    <p>{{ content }}</p> 
-                </div>
-            </div>
-
-            {% if request.user.is_authenticated %}
-            <div class='row'>
-                <div class='col'>
-                    <h1>Premium</h1>
-                    <p>{{ premium_content }}</p>
-                </div>
-            </div>
-            {% endif %}
+        
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
