--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -1,5 +1,7 @@
 {{ object.title }} <br/>
+{{ object.price}} <br/>
 {{ object.description }} <br/>
 {% if object.image %}
     <img src="{{object.image.url }}" class="img-fluid" />
+
 {% endif %}
