--- a/Template/base.html
+++ b/Template/base.html
@@ -9,8 +9,12 @@
         <title>
             Base Template
         </title>
+        {% include 'base/css.html' %}
+        {% block base_head %}{% endblock base_head %}
     </head>
     <body>
+        {% include 'base/navbar.html' %}
         {% block content %} {% endblock %}
+        {% include 'base/js.html' %}
     </body>
 </html>
