add novas funcionalidades

--- a/Template/base/navbar.html
+++ b/Template/base/navbar.html
@@ -10,7 +10,7 @@
     <a class="navbar-brand" href="{{ home_url }}">
         <img src="logo"/>
         
-        {% if nome_da_marca %} {{ nome_da_marca }} {% else %} C&oacute;digo Fluente eCommerce {% endif %}</a>
+        {% if nome_da_marca %} {{ nome_da_marca }} {% else %} C&oacute; StipStore {% endif %}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
