--- a/Template/base.html
+++ b/Template/base.html
@@ -7,13 +7,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>
-            Base Template
+            Stip Store
         </title>
         {% include 'base/css.html' %}
         {% block base_head %}{% endblock base_head %}
     </head>
     <body>
-        {% include 'base/navbar.html' with nome_da_marca='Loja virtual' %}
+        {% include 'base/navbar.html' with nome_da_marca='StipStore' %}
         <div class='container'>
             {% block content %} {% endblock %}
         </div>
