--- a/Template/home_page.html
+++ b/Template/home_page.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 <title>
-    Home Page Template
+    Stip Store
 </title>
 
 {% block base_head %}
@@ -12,19 +12,19 @@
 {% block content %}
     <div class='text-center'>
         <h1>{{ title }}</h1>
-            <p>{{ content }}</p>
+        
     </div>
     <div class='row'>
         <div class='col'>
-        <img src="{% static 'img/th.jpg' %}" class='img-fluid' />
-        <p>{{ content }}</p>
+        <img src="{% static 'aguia_png.png' %}" class='img-fluid' />
+        
         </div>
     </div>
 
     {% if request.user.is_authenticated %}
         <div class='row'>
         <div class='col'>
-            <h1>Premium</h1>
+            <h1>Nosso objetivo é sempre ganhar um cliente e amigo</h1>
             <p>{{ premium_content }}</p>
         </div>
         </div>
