--- a/products/templates/products/list.html
+++ b/products/templates/products/list.html
@@ -4,16 +4,16 @@
 		<div class='row'>
 			{% for obj in object_list %}
 			<div class='col'>
-				{{ forloop.counter }}
-				{% include 'products/snippets/card.html' with instance=obj %}
-				{% if forloop.counter|divisibleby:2 %}
-                	</div><!--close the row--></div><!--close the col--><div class='row'><div class='col-12'><hr/></div>
-                		{% elif forloop.counter|divisibleby:3 %}
-                	</div>
-                		{% else %}
-                	</div>
+				<!--{{ forloop.counter }}-->
+                {% include 'products/snippets/card.html' with instance=obj %}
+                {% if forloop.counter|divisibleby:2 %}
+                </div><!--close the row--></div><!--close the col--><div class='row'><div class='col-12'><hr/></div>
+                {% elif forloop.counter|divisibleby:3 %}
+                </div>
+                {% else %}
+                </div>
                 {% endif%}
-			</div>
 			{% endfor%}
+			</div>
 		</div>
 {% endblock content %}
