add novas funcionalidades

--- a/Template/home_page.html
+++ b/Template/home_page.html
@@ -10,14 +10,13 @@
 {% endblock base_head %}
 
 {% block content %}
-    <div class='text-center'>
+    <div class='text-left'>
         <h1>{{ title }}</h1>
         
     </div>
     <div class='row'>
         <div class='col'>
-        <img src="{% static 'aguia_png.png' %}" class='img-fluid' />
-        
+        <img src="{% static 'C:\Users\felip\Ecommerce\src\static_local\img\stip.jpg' %}" align = "left" class='img-fluid' style="width: 30em;"/>
         </div>
     </div>
 
