--- a/Template/home_page.html
+++ b/Template/home_page.html
@@ -16,15 +16,20 @@
     </div>
     <div class='row'>
         <div class='col'>
-        <img src="{% static 'aguia_png.png' %}" class='img-fluid' />
-        
+            <img src="{% static 'C:\Users\felip\Ecommerce\src\static_local\img\logo_stipsore.jpeg' %}" class='img-fluid'  />
+        </div>
+        <div class='col'>
+            <img src="{% static 'C:\Users\felip\Ecommerce\src\static_local\img\sentapua.png' %}" class='img-fluid' />
+        </div> 
+        <div class='col'>
+            <img src="{% static 'C:\Users\felip\Ecommerce\src\static_local\img\stipsotepge.jpg' %}" class='img-fluid' />
         </div>
     </div>
 
     {% if request.user.is_authenticated %}
         <div class='row'>
         <div class='col'>
-            <h1>Nosso objetivo é sempre ganhar um cliente e amigo</h1>
+            <h1>Nosso objetivo é sempre ganhar um cliente e amigo!</h1>
             <p>{{ premium_content }}</p>
         </div>
         </div>
