--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -3,11 +3,11 @@
 <div class='row'>
     <div class='col-12 col-md-6'>
     <h1>{{ object.title }}</h1>
-    {{ object.timestamp|timesince }} ago
-    {{ object.description|linebreaks }}<br/>
+
     {% if object.image %}
-        <img src='{{ object.image.url }}' class='img-fluid' />
+        <img src='{{ object.image.url }}' class='img-fluid' width="300em"/>
     {% endif %}
+    <br/>{{ object.description|linebreaks }}
     </div>
     <div class='col-12 col-md-6'>
     {% include 'products/snippets/update-cart.html' with product=object cart=cart %}
